35. dotls.c, tcpclient.c, tcpserver.c: added -z option to turn on setting of
    TLS_PROVIDER env variable
36. dotls.c: log ssl cipher bits
37. dotls.c, tcpserver.c, tcpclient.c: replace internal TLS function with TLS
    functions from libqmail
38. removed iopause.c, iopause.h. Use iopause functions from libqmail
39. tcpserver.c: added -S option for connection timeout

* Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.0-1.1%{?dist}
Release 1.1.0 Start 14/02/2021 End 08/09/2022
======= Release Highlights ================================================
o added SSL/TLS support in tcpclient
o added STARTTLS support in tcpclient for POP3s
o dotls transparent SSL/TLS wrapper for tcpserver
o tls.c ported for openssl 3.0.0
===========================================================================
- 02/03/2021
01. tcpserver.c renamed SSL_CIPHER to TLS_CIPHER_LIST
- 03/03/2021
02. tcpclient.c: added SSL/TLS support
03. tcpclient.c: added client mode feature making prog optional
- 04/03/2021
04. tls.c: added option to match host with common name
05. tcpclient.c, tcpserver.c: Use CERTDIR env variable to specify custom
    certificate location
06. tcpclient.c: added -m option to match host with common name
- 06/03/2021
07. dotls.c: SSL/TLS client / server wrapper for SSL/TLS and opportunistic
    TLS
08. tcpclient.c: added opportunistic TLS (STARTLS) capability.
- 07/03/2021
09. tcpclient.c: added starttls for pop3
- 09/03/2021
10. tls.c: check for SSL_ERROR_WANT_READ to retry SSL_read() when using
    non-blocking io
11. tls.c, tcpclient.c: retry read. write on errno == EAGAIN to fix blocking
    IO problem with SSL_read()
12. tls.c: made translate() generic. Replaced SSL with fd parameter
13. doit.c, tcpclient.c: use new translate() from tls.c
- 10/03/2021
14. tls.c, tcpclient.c: use set_essential_fd() to avoid deadlock
- 30/04/2021
15. remove zero bytes package_name-stat.override file
- 12/05/2021