@@ -51,6 +51,18 @@ of the TLS connnection if the -z option is passed.
 
 .SH "OPTIONS"
 .TP
+.B \-q
+Quiet. Do not print error messages.
+
+.TP
+.B \-Q
+(Default.) Print error messages.
+
+.TP
+.B \-v
+Verbose. Print error messages and status messages.
+
+.TP
 -\fBd\fR \fIcertdir\fR
 Directory having certificates.
 Default is @qsysconfdir@/certs.
